improv. add java 17 indications